Added more code, just pushing to save and so it will be shared

--- a/Person/Person/Person.csproj
+++ b/Person/Person/Person.csproj
@@ -42,12 +42,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ArcaneEnemy1.cs" />
-    <Compile Include="MeleeEnemy1.cs" />
+    <Compile Include="ArcaneEnemy.cs" />
+    <Compile Include="MeleeEnemy.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RangedEnemy1.cs" />
+    <Compile Include="RangedEnemy.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
