--- a/Person/Person/Person.csproj
+++ b/Person/Person/Person.csproj
@@ -45,6 +45,7 @@
     <Compile Include="ArcaneEnemy.cs" />
     <Compile Include="MeleeEnemy.cs" />
     <Compile Include="Person.cs" />
+    <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RangedEnemy.cs" />
