--- a/Kingdom-Conqueror/Kingdom-Conqueror/Kingdom-Conqueror.csproj
+++ b/Kingdom-Conqueror/Kingdom-Conqueror/Kingdom-Conqueror.csproj
@@ -98,5 +98,17 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="background-hills.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="3.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="2.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
